--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f65acd67910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcd0df79050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f65aca21310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f65aca21510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd0dfdd490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcd0dfdd690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f65acfd5b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f65acfd5d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd0e52bd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcd0e52bf50&gt;]</pre>
 </div>
 
 </div>
