--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcd0df79050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc0fb3d91d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd0dfdd490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd0dfdd690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0fb132390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc0fb132590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd0e52bd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd0e52bf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0fb681c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc0fb681e50&gt;]</pre>
 </div>
 
 </div>
