--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdbe42b2110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb843a2590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdbe3cac3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdbe3cac5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb8405f350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb8405f550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdbe4536cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdbe4536ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb8461ec90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb8461ee90&gt;]</pre>
 </div>
 
 </div>
