--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f098da17c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec03f25a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f098d733450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f098d733650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec03f7e310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec03f7e510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f098dc91d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f098dc91f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec044d4bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec044d4dd0&gt;]</pre>
 </div>
 
 </div>
