--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3a8237b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36c7bdd910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3a81f5a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3a7eea590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36c79050d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36c7900510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3a7edf350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3a84b7290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36c7e4fc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36c7e57d90&gt;]</pre>
 </div>
 
 </div>
