--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdefbe0bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f852a480790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdef914350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdef914550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f852a1ab350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8529e6ac50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdefe73cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdefe73ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f852a702c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f852a702e50&gt;]</pre>
 </div>
 
 </div>
