--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f852a480790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9161a5c4d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f852a1ab350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8529e6ac50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9161782410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9161782610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f852a702c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f852a702e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9162010bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9162010dd0&gt;]</pre>
 </div>
 
 </div>
