--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9161a5c4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe85dbd8bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9161782410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9161782610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe85d8eb410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe85d8eb650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9162010bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9162010dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe85dea0310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe85de4aed0&gt;]</pre>
 </div>
 
 </div>
