--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50f4b3bb50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff5f898ead0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50f452d290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50f452d4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5f89f0310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5f89f0510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50f4dbdc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50f4dbde50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5f8f3fc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5f8f3fe50&gt;]</pre>
 </div>
 
 </div>
