--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22516f4d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9149576a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22513c0410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22513c0610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f914922a610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f914922a810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f225197bcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f225197bed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91497f1f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91497fe1d0&gt;]</pre>
 </div>
 
 </div>
