--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5681dbbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f88a218a710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe567bcc410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe567bcc610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f88a1b84450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88a1b84650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe568454cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe568454ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f88a2410d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88a2410f10&gt;]</pre>
 </div>
 
 </div>
