--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9cab2e1090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f840177ea90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cab6322d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9cab63d590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f840116a2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f840116a450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cab8719d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9cab879e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84019f7c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84019f7dd0&gt;]</pre>
 </div>
 
 </div>
