--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f865fcc2590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fabbc6c92d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f865f9dc350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f865f9dc550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fabbc0baa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fabbc0bf6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f865ff3ac10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f865ff3ae10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fabbc9bc350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fabbc94cfd0&gt;]</pre>
 </div>
 
 </div>
