--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff991c69610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7dca7a0310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff991951d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff9919273d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7dc9c7a390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7dc9c7a590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff991ee8790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff991ef0d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7dc9eb7c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7dc9eb7e10&gt;]</pre>
 </div>
 
 </div>
