--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa551409850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffae8eb2e90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa55144de90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa551448390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffae88a0310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffae88a0510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa55167f890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa551687d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffae9130b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffae9130d90&gt;]</pre>
 </div>
 
 </div>
