--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffae8eb2e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71d87b6650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffae88a0310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffae88a0510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71d84623d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71d8462550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffae9130b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffae9130d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71d8a2bc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71d8a2bdd0&gt;]</pre>
 </div>
 
 </div>
