--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f869b84af10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f26155754d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f869b4ef290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f869b4ef490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f261523d4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f261523d690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f869babbb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f869babbd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26157fcd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26157fcf50&gt;]</pre>
 </div>
 
 </div>
