--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9dedb6bed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae5e5fbb10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ded896350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ded896550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae5e2c3410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae5e2c3610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dee11ebd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9dee11edd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae5e883c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae5e883e90&gt;]</pre>
 </div>
 
 </div>
