--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efd10529050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4f77ec2650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efd0ff0c590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efd0ff206d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f778b2390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4f778b2590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efd1079ed10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efd107a6fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f78139c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4f78139e10&gt;]</pre>
 </div>
 
 </div>
