--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4f77ec2650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa900b80f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f778b2390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f778b2590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa900eded50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa900ed9450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f78139c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4f78139e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa901110650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa90111ad10&gt;]</pre>
 </div>
 
 </div>
