--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5eb4bfa1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd14908a410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5eb490d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5eb490d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1490ed410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1490ed610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5eb51ed6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5eb5197e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd14963bcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd14963bed0&gt;]</pre>
 </div>
 
 </div>
