--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c9f090790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d19f00090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c9f0d6350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c9f0d6550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d1a2773d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d1a2775d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c9f634c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c9f634e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d1a4b2c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d1a4b2e50&gt;]</pre>
 </div>
 
 </div>
