--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b28b3e6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff4f7a9af50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b28e29210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b28e29410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4f77ba950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4f77bf4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b296adb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b296add50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4f7d1cbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4f7d8c250&gt;]</pre>
 </div>
 
 </div>
