--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76bb65ab10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6fd3d6e350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76bb318250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76bb318450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6fd3a882d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6fd3a884d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76bb8dfad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76bb8dfcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6fd431cb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6fd431cd90&gt;]</pre>
 </div>
 
 </div>
