--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ef3c2de10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e34eeee90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ef3962d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ef3962f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e34ba5c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4e34ba5e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ef41ed650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ef41ed850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e3516f610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4e3516f810&gt;]</pre>
 </div>
 
 </div>
