--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22ec9634d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22dd54fe90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22ec6a4c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22ec6a4e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22dd1d0bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22dd1d0dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22ecc0d550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22ecc0d750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22dd789550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22dd789750&gt;]</pre>
 </div>
 
 </div>
