--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0634003dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e6ca24250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06339f8c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06339f8e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e6c709d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e6c709f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06342794d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0634279710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e6cccb5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e6cccb7d0&gt;]</pre>
 </div>
 
 </div>
