--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f196d6d3390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22d61bc950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f196d3f7b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f196d3f7d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22d5ef0b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22d5ef0d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f196d94e410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f196d94e650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22d6447550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22d6447750&gt;]</pre>
 </div>
 
 </div>
