--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22d61bc950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89677d5ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22d5ef0b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22d5ef0d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8967490bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8967490e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22d6447550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22d6447750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8967a5c4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8967a5c710&gt;]</pre>
 </div>
 
 </div>
