--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee6c983c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbbd7e62590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee6c6a7b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee6c6a7d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbbd7b9cb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbbd7b9cd50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee6cbfe3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee6cbfe5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbbd80f33d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbbd80f3610&gt;]</pre>
 </div>
 
 </div>
