--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4d41c4450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f107e3ca410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4d3bc5d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb4d3bc5f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f107e102b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f107e102dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4d4452610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb4d4452810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f107e98e550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f107e98e790&gt;]</pre>
 </div>
 
 </div>
