--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f595d31bcd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76532014d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f595d03fa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f595d03fc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7652f31cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7652f31ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f595d597350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f595d597550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76531fd950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7653488790&gt;]</pre>
 </div>
 
 </div>
