--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f009b09ec50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74b12c3e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f009adbbe50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f009add1090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74b0f90bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74b0f90dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f009b32a790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f009b36c250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74b1554490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74b1554690&gt;]</pre>
 </div>
 
 </div>
