--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7aedb6a890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ec7376590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7aed892bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7aed892e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ec70bde50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8ec70b1090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7aeddfb550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7aeddfb790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ec7611750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8ec7611950&gt;]</pre>
 </div>
 
 </div>
