--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73288e81d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc49ff0f710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7328301bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7328301dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc49f90c210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc49fc49e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7328b915d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7328b917d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4a01eb610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc4a01a0710&gt;]</pre>
 </div>
 
 </div>
