--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f242f685090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf234f2a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f242f35cc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f242f35ce90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf23224bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf23224dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f242f916590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f242f916790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf23ab3510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf23ab3710&gt;]</pre>
 </div>
 
 </div>
