--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f391dfaa150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff566568c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f391dc67b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f391dc67d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff56621f990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff56621fb90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f391e284f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f391e239650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5667f22d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5667f24d0&gt;]</pre>
 </div>
 
 </div>
