--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e9efe76d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ad8f46850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e9def2b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e9def2d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ad8c98b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ad8c98d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e9e7793d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e9e7795d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ad91ef490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ad91ef690&gt;]</pre>
 </div>
 
 </div>
