--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb931e7b950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f31e5a21a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb931b9cbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb931b9cdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f31e5741c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f31e5741e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb93210d490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb93210d690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f31e5cb0610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f31e5cb0810&gt;]</pre>
 </div>
 
 </div>
