--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2f97bd3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98aa9de190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2f94d5d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff2f94d5f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98aa725c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98aa725e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2f9a45510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff2f9a45710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98aafb2550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98aafb2750&gt;]</pre>
 </div>
 
 </div>
