--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98aa9de190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1247ad8210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98aa725c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98aa725e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f12477ead90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12477eaf90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98aafb2550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98aafb2750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1247db27d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1247d64890&gt;]</pre>
 </div>
 
 </div>
